work in progress
porting tests from grails core to plugin

--- a/application.properties
+++ b/application.properties
@@ -1,4 +1,8 @@
 #Grails Metadata file
-#Fri Nov 18 12:51:21 GMT 2011
+#Thu Dec 08 19:09:47 GMT 2011
 app.grails.version=2.0.0.RC3
 app.name=form-fields
+plugins.hibernate=2.0.0.RC3
+plugins.release=1.0.0.RC3
+plugins.spock=0.6-SNAPSHOT
+plugins.svn=1.0.0.M1
