--- a/test/projects/scaffolding/application.properties
+++ b/test/projects/scaffolding/application.properties
@@ -1,10 +1,13 @@
 #Grails Metadata file
-#Mon Dec 12 09:01:42 GMT 2011
+#Mon Dec 12 13:00:14 GMT 2011
 app.grails.version=2.0.0.RC3
 app.name=scaffolding
 app.servlet.version=2.5
 app.version=0.1
+plugins.geb=0.6.1
 plugins.hibernate=2.0.0.RC3
 plugins.jquery=1.7
 plugins.resources=1.1.3
+plugins.spock=0.6-SNAPSHOT
 plugins.tomcat=2.0.0.RC3
+plugins.webxml=1.3.1
