more gitignore patterns

--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,11 @@
 *.ipr
 *.iws
 /target
-*.log
 /out
-.DS_Store
+*.log
+*.h2.db
+/plugin.xml
+/*.zip
+/*.sha1
 /test/projects/*/target/
-chromedriver
-
+.DS_Store
