--- a/application.properties
+++ b/application.properties
@@ -1,8 +1,5 @@
 #Grails Metadata file
-#Thu Dec 08 19:09:47 GMT 2011
-app.grails.version=2.0.0.RC3
+#Fri Dec 16 14:52:07 GMT 2011
+app.grails.version=2.0.0
 app.name=form-fields
-plugins.hibernate=2.0.0.RC3
-plugins.release=1.0.0.RC3
-plugins.spock=0.6-SNAPSHOT
 plugins.svn=1.0.0.M1
