--- a/application.properties
+++ b/application.properties
@@ -1,5 +1,5 @@
 #Grails Metadata file
 #Fri Dec 16 14:52:07 GMT 2011
 app.grails.version=2.0.0
-app.name=form-fields
+app.name=fields
 plugins.svn=1.0.1
