--- a/application.properties
+++ b/application.properties
@@ -1,4 +1,5 @@
 #Grails Metadata file
-#Tue Jan 10 17:21:31 GMT 2012
+#Fri Mar 16 06:42:38 GMT 2012
 app.grails.version=2.0.1
 app.name=fields
+plugins.release=2.0.0.BUILD-SNAPSHOT
