--- a/application.properties
+++ b/application.properties
@@ -1,5 +1,5 @@
 #Grails Metadata file
-#Fri Mar 16 06:42:38 GMT 2012
+#Thu Mar 22 10:18:10 CET 2012
 app.grails.version=2.0.1
 app.name=fields
 plugins.release=2.0.0.BUILD-SNAPSHOT
