--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 *.ipr
 *.iws
 /target
+target-eclipse
 /out
 *.log
 *.h2.db
@@ -12,3 +13,4 @@
 /test/projects/*/target/
 .DS_Store
 /web-app/
+.link_to_grails_plugins
