Added: template location lookup control switches in order to reduce "groovyPageLocator.findTemplateByPath(path)" calls.

--- a/src/docs/guide/links.yml
+++ b/src/docs/guide/links.yml
@@ -4,3 +4,4 @@ customizingFieldRendering: 3. Customizing Field Rendering
 embeddedProperties: 4. Embedded Properties
 scaffolding: 5. Scaffolding
 includingTemplatesInPlugins: 6. Including Templates in Plugins
+optimizingTemplateLookup: 7. Optimizing Template Lookup
