--- a/application.properties
+++ b/application.properties
@@ -1,4 +1,4 @@
 #Grails Metadata file
-#Fri Mar 16 06:42:38 GMT 2012
-app.grails.version=2.1.0
+#Tue Jul 02 23:56:18 BRT 2013
+app.grails.version=2.2.3
 app.name=fields
