--- a/src/docs/guide/toc.yml
+++ b/src/docs/guide/toc.yml
@@ -4,3 +4,4 @@ customizingFieldRendering: Customizing Field Rendering
 embeddedProperties: Embedded Properties
 scaffolding: Scaffolding
 includingTemplatesInPlugins: Including Templates in Plugins
+performance: Performance
