move travis build to separate script and fix permission error in cli tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,4 @@ jdk:
 branches:
   only:
     - master
-script: ./grailsw refresh-dependencies
-  && ./grailsw "test-app unit:"
+script: ./travis-build.sh
