--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,13 @@ jdk:
 branches:
   only:
     - master
+env:
+  global:
+    - TERM=dumb
+  matrix:
+    - GRAILS_VERSION=2.4.3
+    - GRAILS_VERSION=2.3.11
+    - GRAILS_VERSION=2.2.5
+matrix:
+  fast_finish: false
 script: ./travis-build.sh
