--- a/build.gradle
+++ b/build.gradle
@@ -44,6 +44,12 @@ dependencies {
   provided 'javax.servlet:javax.servlet-api:3.1.0'
 
   testCompile "org.grails:grails-plugin-testing:$grailsVersion"
+
+  testCompile 'javassist:javassist:3.12.0.GA'
+  testCompile('org.jodd:jodd-wot:3.3.4') {
+        exclude module:'slf4j-api'
+        exclude module:'asm'
+  }
 }
 
 sourceSets {
