--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,7 @@ version "2.0-SNAPSHOT"
 group "org.grails.plugins"
 
 apply plugin: "grails-plugin"
+apply plugin: "grails-gsp"
 apply plugin: "maven"
 apply plugin: 'maven-publish'
 apply plugin: 'eclipse'
