--- a/build.gradle
+++ b/build.gradle
@@ -39,9 +39,8 @@ configurations {
 }
 
 dependencies {
-  provided "org.grails:grails-dependencies:$grailsVersion"
+  compile "org.grails:grails-dependencies:$grailsVersion"
   provided "org.grails:grails-web-boot:$grailsVersion"
-  provided "org.grails:grails-dependencies:$grailsVersion"
   provided 'javax.servlet:javax.servlet-api:3.1.0'
 
   testCompile "org.grails:grails-plugin-testing:$grailsVersion"
