--- a/build.gradle
+++ b/build.gradle
@@ -69,14 +69,20 @@ publishing {
             from components.java
             artifact sourcesJar
             artifact javadocJar
+            artifact source:"${sourceSets.main.output.classesDir}/META-INF/grails-plugin.xml", 
+                     classifier:"plugin", 
+                     extension:'xml'
         }
     }
 
     repositories {
         maven {
             credentials {
-                username project.properties.get('grailsPluginsUsername')
-                password project.properties.get('grailsPluginsPassword')
+                def user = System.getenv('GRAILS_CENTRAL_USERNAME') ?: project.properties.get('grailsPluginsUsername')
+                def pass = System.getenv("GRAILS_CENTRAL_PASSWORD") ?: project.properties.get('grailsPluginsPassword')
+
+                username user
+                password pass
             }
             url "https://repo.grails.org/grails/libs-snapshots-local/"
         }
