change repo locations

--- a/build.gradle
+++ b/build.gradle
@@ -84,7 +84,12 @@ publishing {
                 username user
                 password pass
             }
-            url "https://repo.grails.org/grails/libs-snapshots-local/"
+            if(version.endsWith('-SNAPSHOT')) {
+              url "https://repo.grails.org/grails/plugins3-snapshots-local"  
+            }
+            else {
+              url "https://repo.grails.org/grails/plugins3-releases-local"   
+            }
         }
     }
 }
