externalise publishing config

--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ apply plugin: "maven"
 apply plugin: 'maven-publish'
 apply plugin: 'eclipse'
 apply plugin: 'idea'
+apply from:'https://raw.githubusercontent.com/grails/grails-profile-repository/master/profiles/plugin/templates/grailsCentralPublishing.gradle'
 
 
 repositories {
@@ -61,35 +62,3 @@ idea {
     }
 }
 
-
-publishing {
-    publications {
-        maven(MavenPublication) {
-            artifactId project.name
-            from components.java
-            artifact sourcesJar
-            artifact javadocJar
-            artifact source:"${sourceSets.main.output.classesDir}/META-INF/grails-plugin.xml", 
-                     classifier:"plugin", 
-                     extension:'xml'
-        }
-    }
-
-    repositories {
-        maven {
-            credentials {
-                def user = System.getenv('GRAILS_CENTRAL_USERNAME') ?: project.properties.get('grailsPluginsUsername')
-                def pass = System.getenv("GRAILS_CENTRAL_PASSWORD") ?: project.properties.get('grailsPluginsPassword')
-
-                username user
-                password pass
-            }
-            if(version.endsWith('-SNAPSHOT')) {
-              url "https://repo.grails.org/grails/plugins3-snapshots-local"  
-            }
-            else {
-              url "https://repo.grails.org/grails/plugins3-releases-local"   
-            }
-        }
-    }
-}
