--- a/build.gradle
+++ b/build.gradle
@@ -20,8 +20,8 @@ buildscript {
 version "2.0.0-SNAPSHOT"
 group "org.grails.plugins"
 
-apply plugin: "grails-plugin"
-apply plugin: "grails-gsp"
+apply plugin: "org.grails.grails-plugin"
+apply plugin: "org.grails.grails-gsp"
 apply plugin: "maven"
 apply plugin: 'maven-publish'
 apply plugin: 'eclipse'
