--- a/build.gradle
+++ b/build.gradle
@@ -1,20 +1,24 @@
-ext {
-  grailsVersion = "3.0.0.BUILD-SNAPSHOT"
-}
-
 buildscript {
     ext {
-      grailsVersion = "3.0.0.BUILD-SNAPSHOT"
+      grailsVersion = project.grailsVersion
     }
     repositories {
         mavenLocal()
-        mavenCentral()
         maven { url "http://repo.grails.org/grails/core" }
-        maven { url "http://repo.spring.io/libs-release" }
     }
     dependencies {
         classpath "org.grails:grails-gradle-plugin:$grailsVersion"
     }
+}
+
+plugins {
+  id "com.jfrog.bintray" version "1.0"
+  id "io.spring.dependency-management" version "0.3.1.RELEASE"
+}
+
+ext {
+  grailsVersion = project.grailsVersion
+  gradleWrapperVersion = project.gradleWrapperVersion
 }
 
 version "2.0.0-SNAPSHOT"
@@ -27,21 +31,29 @@ apply plugin: 'maven-publish'
 apply plugin: 'eclipse'
 apply plugin: 'idea'
 apply from:'https://raw.githubusercontent.com/grails/grails-profile-repository/master/profiles/plugin/templates/grailsCentralPublishing.gradle'
+apply from:'https://raw.githubusercontent.com/grails/grails-profile-repository/master/profiles/plugin/templates/bintrayPublishing.gradle'
 
+sourceCompatibility = 1.7
+targetCompatibility = 1.7
 
 repositories {
   mavenLocal()
-  mavenCentral()
   maven { url "http://repo.grails.org/grails/core" }
 }
 
+dependencyManagement {
+    imports {
+        mavenBom "org.grails:grails-bom:$grailsVersion"
+    }
+    applyMavenExclusions false
+}
 
 dependencies {
-  compile "org.grails:grails-dependencies:$grailsVersion"
-  provided "org.grails:grails-web-boot:$grailsVersion"
-  provided 'javax.servlet:javax.servlet-api:3.1.0'
+  provided "org.grails:grails-dependencies"
+  provided "org.grails:grails-web-boot"
+  provided 'javax.servlet:javax.servlet-api'
 
-  testCompile "org.grails:grails-plugin-testing:$grailsVersion"
+  testCompile "org.grails:grails-plugin-testing"
 
   testCompile 'javassist:javassist:3.12.0.GA'
   testCompile('org.jodd:jodd-wot:3.3.4') {
