add automatic doc publishing and Bintray releases

--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ group "org.grails.plugins"
 
 apply plugin: "org.grails.grails-plugin"
 apply plugin: "org.grails.grails-gsp"
+apply plugin: "org.grails.grails-doc"
 apply plugin: "maven"
 apply plugin: 'maven-publish'
 apply plugin: 'eclipse'
