--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ jdk:
 - openjdk7
 before_script:
 - rm -rf target
-script: "./travis-build.sh"
+script: ./travis-build.sh
 env:
   global:
   - GIT_NAME="Lari Hotari"
@@ -11,3 +11,5 @@ env:
   - secure: h9Iujsq2khAd0WjqhF+9Hart01mA/E03K2w51lMr4i6aOXUvqF99npzlib/tG4NZlV8pocOKF7ICwx6r3vXc+D2xu4wfyGwPw0+RlwivZBaqeavMmFepVoUW3GBud7LFcmlCX8Br+YbDejXqFv8TgCJwG3X/fEqgRfdurSPwxr4=
   - secure: lDqlh/DbkXHjQkwIjK8MHyc7RIF8BAHaWsqAlc/NiIw/8saY33OYyqh3hnQWkjwdMrzLuy755P5mSZt35Cc54BXXh9hQNhbnQNGJbt85PmmbI7vhqiA0WUatRAb3ZvN52YMsQt/KvYCs3rLn7yJ3jmfGXoLhzVzrOB77XWsxagY=
   - secure: l0Ip7R//w4SjZY+rgLKG9xgF8v1+DE5oK2TxljdNM6IZ52D3XF9T4V/yjhRpU86ayb49a8HpL9HYk7a+Cm0zybSSBDlsw+OYrVMjqdEqPti4o2eERgARgW3CL57Lt5kizK7b4DqsMPWqKJrb/2VKK/wGx7sG7zYs/6EPb1dSSxo=
+  - secure: o9Ko1d8BfkjK30bwAOl+d5lHu7I2REsPg49Z2jRvVCZQJdu5NSJnGWz/cDLgvMQAga32Yzbr6XM/bQSl5frka49RPrK7ahley4D45mZg0z5DXbgITjcIwxY7GgIHZwZ1GoNVw2JjXCbu/ufr4BfPxINuK9xwdzL9Z0ghGmmh674=
+  - secure: heeNuZUfaktaurf7fRRW9YTnp47nPjwjzxQ/wFhqfk+BOJUHuXGqI3Mw9GBspE7zOlx5QgfuXbEndGW9gJUjPuKz5lSg4mCIvCMqvDo8pTx+UPNEXmz9VsAamIjACXDipXCngg0cLU651m8gtzsAGK/RCKwWQfgeZ/GuseuHqzo=
