Use GPG signing

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,3 +13,4 @@ env:
   - secure: l0Ip7R//w4SjZY+rgLKG9xgF8v1+DE5oK2TxljdNM6IZ52D3XF9T4V/yjhRpU86ayb49a8HpL9HYk7a+Cm0zybSSBDlsw+OYrVMjqdEqPti4o2eERgARgW3CL57Lt5kizK7b4DqsMPWqKJrb/2VKK/wGx7sG7zYs/6EPb1dSSxo=
   - secure: o9Ko1d8BfkjK30bwAOl+d5lHu7I2REsPg49Z2jRvVCZQJdu5NSJnGWz/cDLgvMQAga32Yzbr6XM/bQSl5frka49RPrK7ahley4D45mZg0z5DXbgITjcIwxY7GgIHZwZ1GoNVw2JjXCbu/ufr4BfPxINuK9xwdzL9Z0ghGmmh674=
   - secure: heeNuZUfaktaurf7fRRW9YTnp47nPjwjzxQ/wFhqfk+BOJUHuXGqI3Mw9GBspE7zOlx5QgfuXbEndGW9gJUjPuKz5lSg4mCIvCMqvDo8pTx+UPNEXmz9VsAamIjACXDipXCngg0cLU651m8gtzsAGK/RCKwWQfgeZ/GuseuHqzo=
+  - secure: g5FOiF4I+To6cJlMmqW2/DNlQ9bvC1t4SCHXUwNCH/uG4t9oBYP35Ubxb5xplsF6BmVSmIYwSB2NnWZYVxKGvq31Bqo1SnXMt/0Sv04+wS+Ey6Wy1PFIBH/p5j9a76n1z/6e5nHhBJU/T2QrqDfw85j7rFUfRAaELDtrc00FnYc=
