--- a/build.gradle
+++ b/build.gradle
@@ -73,4 +73,13 @@ idea {
         scopes.PROVIDED.plus += [configurations.provided]
     }
 }
+bintray {
+    pkg {
+        version {
+            gpg {
+                sign = true
+            }
+        }
+    }
+}
 
