remove bintray signing for the moment

--- a/build.gradle
+++ b/build.gradle
@@ -73,7 +73,7 @@ idea {
         scopes.PROVIDED.plus += [configurations.provided]
     }
 }
-bintray {
+/*bintray {
     pkg {
         version {
             gpg {
@@ -81,5 +81,5 @@ bintray {
             }
         }
     }
-}
+}*/
 
