--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,7 @@ ext {
   gradleWrapperVersion = project.gradleWrapperVersion
 }
 
-version "2.0.0.M1"
+version "2.0.0-SNAPSHOT"
 group "org.grails.plugins"
 
 apply plugin: "org.grails.grails-plugin"
