--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ jdk:
 - openjdk7
 before_script:
 - rm -rf target
+- echo 'TESTING VARIABLES'
+- echo "${TRAVIS_BRANCH:1}"
 script: ./travis-build.sh
 env:
   global:
@@ -14,3 +16,10 @@ env:
   - secure: o9Ko1d8BfkjK30bwAOl+d5lHu7I2REsPg49Z2jRvVCZQJdu5NSJnGWz/cDLgvMQAga32Yzbr6XM/bQSl5frka49RPrK7ahley4D45mZg0z5DXbgITjcIwxY7GgIHZwZ1GoNVw2JjXCbu/ufr4BfPxINuK9xwdzL9Z0ghGmmh674=
   - secure: heeNuZUfaktaurf7fRRW9YTnp47nPjwjzxQ/wFhqfk+BOJUHuXGqI3Mw9GBspE7zOlx5QgfuXbEndGW9gJUjPuKz5lSg4mCIvCMqvDo8pTx+UPNEXmz9VsAamIjACXDipXCngg0cLU651m8gtzsAGK/RCKwWQfgeZ/GuseuHqzo=
   - secure: g5FOiF4I+To6cJlMmqW2/DNlQ9bvC1t4SCHXUwNCH/uG4t9oBYP35Ubxb5xplsF6BmVSmIYwSB2NnWZYVxKGvq31Bqo1SnXMt/0Sv04+wS+Ey6Wy1PFIBH/p5j9a76n1z/6e5nHhBJU/T2QrqDfw85j7rFUfRAaELDtrc00FnYc=
+deploy:
+  provider: releases
+  api_key:
+    secure: gkZXTeAOejDU/RspONtcFmdqCNHz4w3O6LI7alHK5NpGMrdtvvamk3zrPhQArNk1KHpt8qUpMQYZd+JoZLAaURWdbwv/g0e+woKtbq4zFnRb8vspgXxvCt6u6G6p8gQaTPYfWT0q+bryBNQ6mEgt1PgTca1hB9lsmR3cU6vigdo=
+  file: build/libs/fields-${TRAVIS_TAG:1}.jar
+  on:
+    repo: grails3-plugins/fields
