Fix build error

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,3 +23,5 @@ deploy:
   file: build/libs/fields-${TRAVIS_TAG:1}.jar
   on:
     repo: grails3-plugins/fields
+    tags: true
+    all_branches: true    
