--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ plugins {
     id "com.jfrog.bintray" version "1.1"
 }
 
-version "2.0.0-SNAPSHOT"
+version "2.0.0"
 group "org.grails.plugins"
 
 apply plugin: 'maven-publish'
