--- a/src/docs/guide/links.yml
+++ b/src/docs/guide/links.yml
@@ -1,5 +1,6 @@
 introduction: 1. Introduction
 usage: 2. Usage
+usageBreaking: Breaking Changes
 customizingFieldRendering: 3. Customizing Field Rendering
 embeddedProperties: 4. Embedded Properties
 scaffolding: 5. Scaffolding
