--- a/build.gradle
+++ b/build.gradle
@@ -14,11 +14,20 @@ buildscript {
 
 plugins {
     id "io.spring.dependency-management" version "0.5.1.RELEASE"
-    id "com.jfrog.bintray" version "1.1"
+    id "com.jfrog.bintray" version "1.2"
 }
 
-version "2.1.0-SNAPSHOT"
+version "2.1.1-SNAPSHOT"
 group "org.grails.plugins"
+
+bintray {
+    pkg {
+        userOrg = 'grails'
+        name = "org.grails.plugins:$project.name"
+        issueTrackerUrl = "https://github.com/grails-fields-plugin/grails-fields/issues"
+        vcsUrl = "https://github.com/grails-fields-plugin/grails-fields"
+    }
+}
 
 apply plugin: 'maven-publish'
 apply plugin: 'eclipse'
