Fix Travis config

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,25 +4,23 @@ jdk:
 - openjdk7
 cache:
   directories:
-    - $HOME/.gradle
+  - $HOME/.gradle
 script: ./travis-build.sh
 env:
   global:
-  - GIT_NAME="Lari Hotari"
-  - GIT_EMAIL="lari@hotari.net"
-  - secure: h9Iujsq2khAd0WjqhF+9Hart01mA/E03K2w51lMr4i6aOXUvqF99npzlib/tG4NZlV8pocOKF7ICwx6r3vXc+D2xu4wfyGwPw0+RlwivZBaqeavMmFepVoUW3GBud7LFcmlCX8Br+YbDejXqFv8TgCJwG3X/fEqgRfdurSPwxr4=
-  - secure: lDqlh/DbkXHjQkwIjK8MHyc7RIF8BAHaWsqAlc/NiIw/8saY33OYyqh3hnQWkjwdMrzLuy755P5mSZt35Cc54BXXh9hQNhbnQNGJbt85PmmbI7vhqiA0WUatRAb3ZvN52YMsQt/KvYCs3rLn7yJ3jmfGXoLhzVzrOB77XWsxagY=
-  - secure: l0Ip7R//w4SjZY+rgLKG9xgF8v1+DE5oK2TxljdNM6IZ52D3XF9T4V/yjhRpU86ayb49a8HpL9HYk7a+Cm0zybSSBDlsw+OYrVMjqdEqPti4o2eERgARgW3CL57Lt5kizK7b4DqsMPWqKJrb/2VKK/wGx7sG7zYs/6EPb1dSSxo=
-  - secure: o9Ko1d8BfkjK30bwAOl+d5lHu7I2REsPg49Z2jRvVCZQJdu5NSJnGWz/cDLgvMQAga32Yzbr6XM/bQSl5frka49RPrK7ahley4D45mZg0z5DXbgITjcIwxY7GgIHZwZ1GoNVw2JjXCbu/ufr4BfPxINuK9xwdzL9Z0ghGmmh674=
-  - secure: heeNuZUfaktaurf7fRRW9YTnp47nPjwjzxQ/wFhqfk+BOJUHuXGqI3Mw9GBspE7zOlx5QgfuXbEndGW9gJUjPuKz5lSg4mCIvCMqvDo8pTx+UPNEXmz9VsAamIjACXDipXCngg0cLU651m8gtzsAGK/RCKwWQfgeZ/GuseuHqzo=
-  - secure: g5FOiF4I+To6cJlMmqW2/DNlQ9bvC1t4SCHXUwNCH/uG4t9oBYP35Ubxb5xplsF6BmVSmIYwSB2NnWZYVxKGvq31Bqo1SnXMt/0Sv04+wS+Ey6Wy1PFIBH/p5j9a76n1z/6e5nHhBJU/T2QrqDfw85j7rFUfRAaELDtrc00FnYc=
+  - GIT_NAME="Graeme Rocher"
+  - GIT_EMAIL="graeme@grails.org"
+  - secure: IjxBId99KOluOdIDs8LgHHmIXEOKX9bpGBCk5JEbtEeBQgfDCKbDwWY612JGpoV7AJU+U5JMktqTUA5NgObiZGlOwP5e656J2qs5P+NMv1XxuuIpV4RWD9G/l8elvurs6EBsEXlEnau3Qt0frGV5wf/ctcnVIfptocMbuVt8Xc0=
+  - secure: MZocnoJDKSc1F6zgsp8fk6jKgulckxMh5vFhpvAJgYVDM5bGr9SgjFgvDo5qBj+bdwhuFAZSbFoOThAyEeScv2pD2Wl67NSVd5eSYuIH5np5VnQSI7SDSSbDOd9+mSsAgARmFhqvgzkMntSnPfY01SgUp1tA6fPtnTx8qEJTSjE=
+  - secure: MhNZ7rvwPimy72WtIaXja7oCt4DM1BNumodtiCzBXE7JOkkjRQxUaELC/xGEY4wFRudWRfJhk/qfto+yvvLztvH3ScGW0uXPlrbrcBqYCwbZMZ/qhYCPoXNqN9WWKMyUc/wiZ9AIv0jotXxIhvr16Nxig3mbAtNcvRA1L12Z6w4=
+  - secure: IMVlDjyytWvruLid4JFAUhbi1S/DFicdxisRKGAdjTTGhBvLwDb5d+LQNPfeE8AImELve1BKJ/6R3FWPHPcE8gh7qMapB7PGiOE5DR0CDC702jVM1U/8zv+P0Qmh8nMJaesk+tWWMpsbnBQsa680D9Efu50iiyZbmBShdVhDmM0=
+  - secure: 3yJOdxgg+zM2cUSzDRiIYuXU9nuuumMLwD1JcRrxpoT1Hqwc36ZelwxOA2F723S8dKRhwuAyGaU8Iop7GPL0M0bypx1Z9MwcFvma98wyWWHc12Uy0AoOq1m8zOC2V2Gm6nszCxtHXzGmkGrq9bAA+hMvem0TyIgClGoPvjp1DyM=
 deploy:
   provider: releases
   api_key:
-    secure: gkZXTeAOejDU/RspONtcFmdqCNHz4w3O6LI7alHK5NpGMrdtvvamk3zrPhQArNk1KHpt8qUpMQYZd+JoZLAaURWdbwv/g0e+woKtbq4zFnRb8vspgXxvCt6u6G6p8gQaTPYfWT0q+bryBNQ6mEgt1PgTca1hB9lsmR3cU6vigdo=
+    secure: RnhIMoSXTyeMwjx4EX/9NAvq9xhDXOgWaKoNHmcRaBYV8F8bPl1ksAfQ36cP7dYpVyj5VeJF5S2syTaQfaRAaXsU3tb/WIVSl/jb5O0u9qhcBdGdzZ8LkVYd7728BvVD6eFclN6mYm6xmwM6jc/nHzxCWsg7qH3snp3CmjbQ8Lo=
   file: build/libs/fields-${TRAVIS_TAG:1}.jar
   on:
-    repo: grails3-plugins/fields
+    repo: grails-fields-plugin/grails-fields
+    branch: grails3
     tags: true
-    all_branches: true  
-
