--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ plugins {
     id "com.jfrog.bintray" version "1.2"
 }
 
-version "2.1.2-SNAPSHOT"
+version "2.1.2"
 group "org.grails.plugins"
 
 bintray {
