Attempt to fix docs build

--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,7 @@ configurations {
 }
 
 dependencies {
-    documentation project(':scaffolding-core')
+    documentation "org.codehaus.groovy:groovy-all:2.4.6"
 }
 
 task apidocs(type: Groovydoc) {
