--- a/src/docs/guide/toc.yml
+++ b/src/docs/guide/toc.yml
@@ -3,5 +3,6 @@ usage: Usage
 customizingFieldRendering: Customizing Field Rendering
 embeddedProperties: Embedded Properties
 scaffolding: Scaffolding
+themes: Themes
 includingTemplatesInPlugins: Including Templates in Plugins
 performance: Performance
