Upgrade to Grails 3.2.8

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,12 +9,7 @@ script: ./travis-build.sh
 env:
   global:
   - GIT_NAME="Graeme Rocher"
-  - GIT_EMAIL="graeme@grails.org"
-  - secure: IjxBId99KOluOdIDs8LgHHmIXEOKX9bpGBCk5JEbtEeBQgfDCKbDwWY612JGpoV7AJU+U5JMktqTUA5NgObiZGlOwP5e656J2qs5P+NMv1XxuuIpV4RWD9G/l8elvurs6EBsEXlEnau3Qt0frGV5wf/ctcnVIfptocMbuVt8Xc0=
-  - secure: MZocnoJDKSc1F6zgsp8fk6jKgulckxMh5vFhpvAJgYVDM5bGr9SgjFgvDo5qBj+bdwhuFAZSbFoOThAyEeScv2pD2Wl67NSVd5eSYuIH5np5VnQSI7SDSSbDOd9+mSsAgARmFhqvgzkMntSnPfY01SgUp1tA6fPtnTx8qEJTSjE=
-  - secure: MhNZ7rvwPimy72WtIaXja7oCt4DM1BNumodtiCzBXE7JOkkjRQxUaELC/xGEY4wFRudWRfJhk/qfto+yvvLztvH3ScGW0uXPlrbrcBqYCwbZMZ/qhYCPoXNqN9WWKMyUc/wiZ9AIv0jotXxIhvr16Nxig3mbAtNcvRA1L12Z6w4=
-  - secure: IMVlDjyytWvruLid4JFAUhbi1S/DFicdxisRKGAdjTTGhBvLwDb5d+LQNPfeE8AImELve1BKJ/6R3FWPHPcE8gh7qMapB7PGiOE5DR0CDC702jVM1U/8zv+P0Qmh8nMJaesk+tWWMpsbnBQsa680D9Efu50iiyZbmBShdVhDmM0=
-  - secure: 3yJOdxgg+zM2cUSzDRiIYuXU9nuuumMLwD1JcRrxpoT1Hqwc36ZelwxOA2F723S8dKRhwuAyGaU8Iop7GPL0M0bypx1Z9MwcFvma98wyWWHc12Uy0AoOq1m8zOC2V2Gm6nszCxtHXzGmkGrq9bAA+hMvem0TyIgClGoPvjp1DyM=
+  - GIT_EMAIL="graeme.rocher@gmail.com"
 deploy:
   provider: releases
   api_key:
