--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,13 @@ env:
   global:
   - GIT_NAME="Graeme Rocher"
   - GIT_EMAIL="graeme.rocher@gmail.com"
+  - secure: P2rW89jCou+qLIc0kQ0Fti3jVFcUDfVQPU340/mlT9ZHZeBz+u8EWFznkGYbKfpSbypopYgPE8K4dPKR+Tef4Kk2DliYG8W+lOCJmkn9KVBCCykZFxABDbF1f5nWLYLUeeUlNLIczD3wwNpY6l40YjbrgpRbL9PfOIPVNW3I/MU=
+  - secure: M0oGjmNF3j2xSOAMqqDzzbqwt1qvlrMqzvnEv9LFij2ojWzs+8/XrjOUf1PBMplRFmWuNjB08Wi/ZbRAzeU63kA1K+KxaA7HcxFUIrdVrL0RYLrIF3Y9tQXmHwWyendE3mCriT4EwfOSpJlq5aCqHe12NE9rMUMMyvskOAbi6ZE=
+  - secure: TRMsgZ4z7UuEnVF5ZL0N7upfaYGmyJ4bm78SaEW2tuXUtKILNRMNtZt85/2F+NqhuSBugGpRRpDlOB7KQiBOjGHmBVX4O/2yW8VvveHwesk2/kZngJx+JeFBQAsO72BxV+gptL/5uM9TuYzdQ2MM87J+++yIDGBWOi3nvyjgQN4=
+  - secure: s5s6BPYOH00sjEckAry3Uz0PDw1b8WCuDvPPE37Yv0a/0pbl8huUh4aWUJa7YkXwpCXc9/x20xerAg5fK/KVsL1HQp2flIWHNOJrgrU8pJBBsAxHZF56zK3S4PebVJYPzfIgvuXFctE3V/9aYf1bPLfP7XFkWxqliMS7IofI/vU=
+  - secure: Ky+BKrVIU3Zl8XeGvPGJ2ApoCztiomMVWOCWH1C6S/exkcSvLLwT9b3LAL0C7+AlPXOHo0pZuKIgbZORwxAqdGwjraHY3Q9Ihl1IAITnk4RiqLLMqTYIE7vukpdkAfPWP5VEY/rYrSvZam7KL8IBX2cn8dLSRwMOpSJQUKM1698=
+  - secure: LqaKsCK9GX4UkSy+b+ZXeRAy6XV/4bS3xMKncz/Xfp0y8Qxft+Wjq8t5M724L3IaL0TmDItFTD5tHhY/qNPcuIKjJo5NYEr2jiM2P2TpR0nFpuNp2iuRURQOcsMHgB4jVXnBtdkbQZ3zGByIIFePHac15aJN7XJKW6l9qo9tq2E=
+  - secure: x5Zb/cnspEZNGjWZvw0dN51USjYf8g/J3lox0ZV8BBDWumiBYGjxMsUTOHiG2J6xy5FF3wH156wBKVMVzQpaK0leBx1pppJtRKzW9zKLE8bh7GIseOLd1+MHR6tPqwgAfYLZU03ytQjTKKUaPpBcAC5gsnCJJfYwiNG0cz9l2fc=
 deploy:
   provider: releases
   api_key:
