--- a/gradle.properties
+++ b/gradle.properties
@@ -1,2 +1,8 @@
 grailsVersion=3.2.8
 gradleWrapperVersion=2.3
+asciidoc=true
+githubSlug=grails-fields-plugin/grails-fields
+githubBranch=master
+title=Grails Fields Plugin
+projectDesc=Customizable form-field rendering based on overrideable GSP template
+guide=../../guide
