--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,8 @@ plugins {
 }
 
 
-version "2.1.4-SNAPSHOT"
+// version "2.1.5-SNAPSHOT"
+version "2.1.4"
 group "org.grails.plugins"
 
 apply plugin:"org.grails.grails-plugin"
