Add @Autowired / re-enable GSP compilation

--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,7 @@ version "2.1.5-SNAPSHOT"
 group "org.grails.plugins"
 
 apply plugin:"org.grails.grails-plugin"
+apply plugin:"org.grails.grails-gsp"
 apply plugin:"org.grails.grails-plugin-publish"
 apply from:"https://raw.githubusercontent.com/grails/grails-common-build/6c658fc85b6f9f6efac75f8ca160a339f844013e/common-docs.gradle"
 
