--- a/build.gradle
+++ b/build.gradle
@@ -16,8 +16,8 @@ plugins {
 }
 
 
-version "2.1.5-SNAPSHOT"
-// version "2.1.4"
+// version "2.1.6-SNAPSHOT"
+version "2.1.5"
 group "org.grails.plugins"
 
 apply plugin:"org.grails.grails-plugin"
