--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ plugins {
 }
 
 
-version "2.1.6-SNAPSHOT"
+version "2.2.0-SNAPSHOT"
 // version "2.1.5"
 group "org.grails.plugins"
 
@@ -36,32 +36,34 @@ targetCompatibility = 1.7
 
 
 repositories {
-  mavenLocal()
-  mavenCentral()
-  maven { url "https://repo.grails.org/grails/core" }
+    mavenLocal()
+    mavenCentral()
+    maven { url "https://repo.grails.org/grails/core" }
 }
 
 
 
 dependencies {
-  provided 'org.springframework.boot:spring-boot-starter-logging'
-  provided "org.springframework.boot:spring-boot-starter-actuator"
-  provided "org.springframework.boot:spring-boot-autoconfigure"
-  provided "org.springframework.boot:spring-boot-starter-tomcat"
+    //provided 'org.springframework.boot:spring-boot-starter-logging'
+    provided "org.springframework.boot:spring-boot-starter-actuator"
+    provided "org.springframework.boot:spring-boot-autoconfigure"
+    provided "org.springframework.boot:spring-boot-starter-tomcat"
 
-  provided "org.grails:grails-web-boot"
-  provided "org.grails:grails-dependencies"
-  provided 'javax.servlet:javax.servlet-api:3.1.0'
+    provided "org.grails:grails-web-boot"
+    provided "org.grails:grails-dependencies"
+    provided 'javax.servlet:javax.servlet-api:3.1.0'
 
-  testCompile "org.grails:grails-plugin-testing"
+    compile "org.grails:scaffolding-core:1.0.3"
 
-  console "org.grails:grails-console"
+    testCompile "org.grails:grails-plugin-testing"
 
-  testCompile 'javassist:javassist:3.12.0.GA'
-  testCompile('org.jodd:jodd-wot:3.3.4') {
+    console "org.grails:grails-console"
+
+    testCompile 'javassist:javassist:3.12.0.GA'
+    testCompile('org.jodd:jodd-wot:3.3.4') {
         exclude module:'slf4j-api'
         exclude module:'asm'
-  }
+    }
 }
 
 grailsPublish {
