Updates to support GORM 6.1 which registers a PersistentEntityValidator by default

--- a/build.gradle
+++ b/build.gradle
@@ -51,6 +51,7 @@ dependencyManagement {
 dependencies {
     compile "org.grails:grails-core"
     compile "org.grails:grails-datastore-core"
+    compile "org.grails:grails-datastore-gorm-validation"
     compile "org.grails:grails-web-url-mappings"
 
     testCompile "org.hibernate:hibernate-core:4.3.11.Final"
