--- a/build.gradle
+++ b/build.gradle
@@ -16,8 +16,8 @@ plugins {
 }
 
 
-version "2.2.2.BUILD-SNAPSHOT"
-//version "2.2.1"
+//version "2.2.2.BUILD-SNAPSHOT"
+version "2.2.2"
 group "org.grails.plugins"
 
 apply plugin:"org.grails.grails-plugin"
