--- a/build.gradle
+++ b/build.gradle
@@ -16,8 +16,8 @@ plugins {
 }
 
 
-//version "2.2.7.BUILD-SNAPSHOT"
-version "2.2.6"
+version "2.2.7.BUILD-SNAPSHOT"
+//version "2.2.7"
 group "org.grails.plugins"
 
 apply plugin:"org.grails.grails-plugin"
