Travis will publish build reports on failure

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,8 @@ cache:
   directories:
   - $HOME/.gradle
 script: ./travis-build.sh
+after_failure:
+  - ./travis/publish_reports.sh
 env:
   global:
   - GIT_NAME="Graeme Rocher"
