Using latest Grails 3.x documentation build scripts

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,5 @@
+projectVersion=2.2.8.BUILD-SNAPSHOT
+releaseVersion=2.2.7
 grailsVersion=3.2.8
 gradleWrapperVersion=2.3
 asciidoc=true
@@ -6,3 +8,5 @@ githubBranch=master
 title=Grails Fields Plugin
 projectDesc=Customizable form-field rendering based on overrideable GSP template
 guide=../../guide
+projectUrl=https://github.com/fields/grails-fields
+developers=Robert Fletcher, Graeme Rocher, Søren Berg Glasius
