--- a/build.gradle
+++ b/build.gradle
@@ -1,34 +1,29 @@
 buildscript {
-    ext {
-      grailsVersion = project.grailsVersion
-    }
-    repositories {
-        mavenLocal()
-        maven { url "https://repo.grails.org/grails/core" }
-    }
-    dependencies {
-        classpath "org.grails:grails-gradle-plugin:$grailsVersion"
-        classpath "org.grails:gdoc-to-asciidoc:1.0.1"
-    }
-}
-plugins {
-    id 'org.asciidoctor.convert' version '1.5.3'
+	ext {
+		grailsVersion = project.grailsVersion
+	}
+	repositories {
+		mavenLocal()
+		maven { url "https://repo.grails.org/grails/core" }
+	}
+	dependencies {
+		classpath "org.grails:grails-gradle-plugin:$grailsVersion"
+		classpath 'io.github.groovylang.groovydoc:groovydoc-gradle-plugin:1.0.1'
+	}
 }
 
-
-version "2.2.7.BUILD-SNAPSHOT"
-//version "2.2.7"
+version project.projectVersion
 group "org.grails.plugins"
 
-apply plugin:"org.grails.grails-plugin"
-apply plugin:"org.grails.grails-gsp"
-apply plugin:"org.grails.grails-plugin-publish"
-apply from:"https://raw.githubusercontent.com/grails/grails-common-build/6c658fc85b6f9f6efac75f8ca160a339f844013e/common-docs.gradle"
-
+apply plugin: "org.grails.grails-plugin"
+apply plugin: "org.grails.grails-gsp"
+apply plugin: "org.grails.grails-plugin-publish"
 
 ext {
-  grailsVersion = project.grailsVersion
-  gradleWrapperVersion = project.gradleWrapperVersion
+	grailsVersion = project.grailsVersion
+	gradleWrapperVersion = project.gradleWrapperVersion
+	commonBuild = 'https://raw.githubusercontent.com/grails/grails-common-build/d46efe9f0b41d6d215e245451a4c9d3504c347ee'
+
 }
 
 sourceCompatibility = 1.7
@@ -36,44 +31,46 @@ targetCompatibility = 1.7
 
 
 repositories {
-    mavenLocal()
-    mavenCentral()
-    maven { url "https://repo.grails.org/grails/core" }
+	mavenLocal()
+	mavenCentral()
+	maven { url "https://repo.grails.org/grails/core" }
 }
 
 
 
 dependencies {
-    //provided 'org.springframework.boot:spring-boot-starter-logging'
-    provided "org.springframework.boot:spring-boot-starter-actuator"
-    provided "org.springframework.boot:spring-boot-autoconfigure"
-    provided "org.springframework.boot:spring-boot-starter-tomcat"
+	//provided 'org.springframework.boot:spring-boot-starter-logging'
+	provided "org.springframework.boot:spring-boot-starter-actuator"
+	provided "org.springframework.boot:spring-boot-autoconfigure"
+	provided "org.springframework.boot:spring-boot-starter-tomcat"
 
-    provided "org.grails:grails-web-boot"
-    provided "org.grails:grails-dependencies"
-    provided 'javax.servlet:javax.servlet-api:3.1.0'
+	provided "org.grails:grails-web-boot"
+	provided "org.grails:grails-dependencies"
+	provided 'javax.servlet:javax.servlet-api:3.1.0'
 
-    compile "org.grails:scaffolding-core:1.1.1"
+	compile "org.grails:scaffolding-core:1.1.1"
 
-    testCompile "org.grails:grails-plugin-testing"
+	testCompile "org.grails:grails-plugin-testing"
 
-    console "org.grails:grails-console"
+	console "org.grails:grails-console"
 
-    testCompile 'javassist:javassist:3.12.0.GA'
-    testCompile('org.jodd:jodd-wot:3.3.4') {
-        exclude module:'slf4j-api'
-        exclude module:'asm'
-    }
+	testCompile 'javassist:javassist:3.12.0.GA'
+	testCompile('org.jodd:jodd-wot:3.3.4') {
+		exclude module: 'slf4j-api'
+		exclude module: 'asm'
+	}
 }
 
 grailsPublish {
-    userOrg = "grails"
-    githubSlug = project.githubSlug
-    license {
-        name = 'Apache-2.0'
-    }
-    title = project.title
-    desc = project.projectDesc
+	userOrg = "grails"
+	githubSlug = project.githubSlug
+	license {
+		name = 'Apache-2.0'
+	}
+	title = project.title
+	desc = project.projectDesc
 
-    developers = [graemerocher:"Graeme Rocher", robfletcher:"Rob Fletcher"]
+	developers = [graemerocher: "Graeme Rocher", robfletcher: "Rob Fletcher", sbglasius: "Søren Berg Glasius"]
 }
+
+apply from: "${commonBuild}/common-docs.gradle"
