Back on snapshot

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
-#projectVersion=2.2.8.BUILD-SNAPSHOT
-projectVersion=2.2.7
+projectVersion=2.2.8.BUILD-SNAPSHOT
+#projectVersion=2.2.7
 grailsVersion=3.2.8
 gradleWrapperVersion=2.3
 asciidoc=true
