--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ buildscript {
 
 plugins {
     id "io.spring.dependency-management" version "0.5.2.RELEASE"
-    id "com.jfrog.bintray" version "1.2"
+    id "com.jfrog.bintray" version "1.8.4"
 }
 
 group "org.grails"
@@ -52,10 +52,13 @@ dependencies {
     compile "org.grails:grails-datastore-core"
     compile "org.grails:grails-datastore-gorm-validation"
     compile "org.grails:grails-web-url-mappings"
-
+    compile 'javax.annotation:javax.annotation-api:1.3.2'
+    
     testCompile "org.hibernate:hibernate-core:4.3.11.Final"
     testCompile "org.grails:grails-datastore-gorm-hibernate-core:6.0.10.RELEASE"
-    testCompile "org.grails:grails-plugin-testing"
+    testCompile "org.spockframework:spock-core:1.2-groovy-2.5"
+    testCompile 'net.bytebuddy:byte-buddy:1.9.4'
+    testCompile 'org.objenesis:objenesis:3.0.1'
 }
 
 task sourcesJar(type:Jar) {
