Updates to be compatible with Grails 4

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
-projectVersion=2.2.9.BUILD-SNAPSHOT
+projectVersion=3.0.0.BUILD-SNAPSHOT
 #projectVersion=2.2.7
-grailsVersion=3.2.8
+grailsVersion=4.0.0.BUILD-SNAPSHOT
 gradleWrapperVersion=2.3
 asciidoc=true
 githubSlug=grails-fields-plugin/grails-fields
