--- a/build.gradle
+++ b/build.gradle
@@ -48,13 +48,18 @@ dependencies {
 	provided "org.grails:grails-dependencies"
 	provided 'javax.servlet:javax.servlet-api:3.1.0'
 
-	compile "org.grails:scaffolding-core:1.1.1"
+	compile "org.grails:scaffolding-core:2.0.0.BUILD-SNAPSHOT"
 
-	testCompile "org.grails:grails-plugin-testing"
+	//testCompile "org.grails:grails-plugin-testing"
+
+	testCompile "org.grails:grails-web-testing-support:2.0.0.BUILD-SNAPSHOT"
+	testCompile "org.grails:grails-gorm-testing-support:2.0.0.BUILD-SNAPSHOT"
 
 	console "org.grails:grails-console"
 
+	testCompile "org.codehaus.groovy:groovy-dateutil:2.5.4"
 	testCompile 'javassist:javassist:3.12.0.GA'
+	testCompile 'cglib:cglib-nodep:3.2.9'
 	testCompile('org.jodd:jodd-wot:3.3.4') {
 		exclude module: 'slf4j-api'
 		exclude module: 'asm'
