--- a/build.gradle
+++ b/build.gradle
@@ -44,8 +44,8 @@ dependencies {
     compile "org.grails:grails-web-url-mappings"
     compile 'javax.annotation:javax.annotation-api:1.3.2'
     
-    testCompile "org.hibernate:hibernate-core:4.3.11.Final"
-    testCompile "org.grails:grails-datastore-gorm-hibernate-core:6.0.10.RELEASE"
+    testCompile "org.hibernate:hibernate-core:$hibernateVersion"
+    testCompile "org.grails:grails-datastore-gorm-hibernate-core:$gormVersion"
     testCompile "org.spockframework:spock-core:1.2-groovy-2.5"
     testCompile 'net.bytebuddy:byte-buddy:1.9.4'
     testCompile 'org.objenesis:objenesis:3.0.1'
