Define scaffolding version in gradle.properties

--- a/gradle.properties
+++ b/gradle.properties
@@ -2,6 +2,7 @@ projectVersion=3.0.0.BUILD-SNAPSHOT
 #projectVersion=2.2.7
 grailsVersion=4.0.0.BUILD-SNAPSHOT
 gradleWrapperVersion=2.3
+scaffoldingVersion=2.0.0.BUILD-SNAPSHOT
 asciidoc=true
 githubSlug=grails-fields-plugin/grails-fields
 githubBranch=master
