--- a/build.gradle
+++ b/build.gradle
@@ -47,7 +47,7 @@ dependencies {
 	provided "org.grails:grails-dependencies"
 	provided 'javax.servlet:javax.servlet-api:3.1.0'
 
-	compile "org.grails:scaffolding-core:2.0.0.BUILD-SNAPSHOT"
+	compile "org.grails:scaffolding-core:$scaffoldingVersion"
 
 	//testCompile "org.grails:grails-plugin-testing"
 
