--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,13 @@
 language: groovy
 jdk:
 - openjdk8
+before_cache:
+  - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
+  - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
 cache:
   directories:
-  - "$HOME/.gradle"
+    - $HOME/.gradle/caches/
+    - $HOME/.gradle/wrapper/
 script: "./travis-build.sh"
 after_failure:
 - "./travis/publish_reports.sh"
