Skipping the Installation Phase - Travis CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,7 @@ env:
   - secure: DsItL1MTuV9GLC2JKblnFqTvj8swuM4C96sPHRjrz0OArs6QZ3oyuaYdWFQIQdgeaO08gvoyjjP5TrT5UWEO8j6ElAbQMoYISffcqSzmzo82rBQTrjNjWHQ98BOcM8ge1A8lInHEuOBnQVxpk4KB2SOPD2QJeUd1MC9qXZpWQig=
   - secure: 3dy+H77W9DUZnie/8VkkknD3v93+r5HWR6qxKim4C81EOk/FPFp64ejc9TIjoIs+24SKCfSCDRe3O9EqyJRH6UGFPFBsap59CTQALppM7nI9ws0JzW/JmLIuqRhT+INgoVnD3ZWZ9onHFgwHZEWmhcRYY/iMybKrxXgI0rFXy18=
   - secure: l7P4ZS1P2zl6fh1jQjOv28xl6uJUwxbcH7gorNly8kF5f14ebqH93uiGNctDHGHJ2a73iy632h8MG7btTdmP/s0t+Oz6ZZFyEUh4q6DVzOuOzJ6HEGn0u/uHdfgHACETwKqt8sQwmmYv4CV/EG9zgF8eIZGJMwrSCqtdHJTR5tI=
+install: true
 deploy:
   provider: releases
   api_key:
