format developers map

--- a/build.gradle
+++ b/build.gradle
@@ -67,7 +67,11 @@ grailsPublish {
 	title = project.title
 	desc = project.projectDesc
 
-	developers = [graemerocher: "Graeme Rocher", robfletcher: "Rob Fletcher", sbglasius: "Søren Berg Glasius"]
+	developers = [
+			graemerocher: "Graeme Rocher",
+			robfletcher: "Rob Fletcher",
+			sbglasius: "Søren Berg Glasius"
+	]
 }
 
 apply from: "${commonBuild}/common-docs.gradle"
