uncomment spring-boot-starter-logging

--- a/build.gradle
+++ b/build.gradle
@@ -31,7 +31,7 @@ repositories {
 }
 
 dependencies {
-	//provided 'org.springframework.boot:spring-boot-starter-logging'
+	provided 'org.springframework.boot:spring-boot-starter-logging'
 	provided "org.springframework.boot:spring-boot-starter-actuator"
 	provided "org.springframework.boot:spring-boot-autoconfigure"
 	provided "org.springframework.boot:spring-boot-starter-tomcat"
