--- a/gradle.properties
+++ b/gradle.properties
@@ -2,6 +2,7 @@ projectVersion=3.0.0.BUILD-SNAPSHOT
 #projectVersion=2.2.7
 grailsVersion=4.0.0.BUILD-SNAPSHOT
 scaffoldingVersion=2.0.0.BUILD-SNAPSHOT
+groovyVersion=2.5.4
 asciidoc=true
 githubSlug=grails-fields-plugin/grails-fields
 githubBranch=master
