--- a/build.gradle
+++ b/build.gradle
@@ -50,8 +50,8 @@ dependencies {
 	console "org.grails:grails-console"
 
 	testCompile 'javassist:javassist:3.12.0.GA'
-	testCompile 'cglib:cglib-nodep:3.2.9'
 	testCompile "org.codehaus.groovy:groovy-dateutil:$groovyVersion"
+	testCompile "cglib:cglib-nodep:$cglibNodepVersion"
 	testCompile("org.jodd:jodd-wot:$joddWotVersion") {
 		exclude module: 'slf4j-api'
 		exclude module: 'asm'
