--- a/gradle.properties
+++ b/gradle.properties
@@ -3,6 +3,7 @@ projectVersion=3.0.0.BUILD-SNAPSHOT
 grailsVersion=4.0.0.BUILD-SNAPSHOT
 scaffoldingVersion=2.0.0.BUILD-SNAPSHOT
 groovyVersion=2.5.4
+cglibNodepVersion=3.2.9
 joddWotVersion=3.3.8
 asciidoc=true
 githubSlug=grails-fields-plugin/grails-fields
