--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,8 @@ buildscript {
 version project.projectVersion
 group "org.grails.plugins"
 
+apply plugin:"eclipse"
+apply plugin:"idea"
 apply plugin: "org.grails.grails-plugin"
 apply plugin: "org.grails.grails-gsp"
 apply plugin: "org.grails.grails-plugin-publish"
