--- a/build.gradle
+++ b/build.gradle
@@ -40,7 +40,7 @@ dependencies {
 
 	provided "org.grails:grails-web-boot"
 	provided "org.grails:grails-dependencies"
-	provided 'javax.servlet:javax.servlet-api:3.1.0'
+	provided "javax.servlet:javax.servlet-api:$servletApiVersion"
 
 	compile "org.grails:scaffolding-core:$scaffoldingVersion"
 
