--- a/gradle.properties
+++ b/gradle.properties
@@ -5,6 +5,7 @@ scaffoldingVersion=2.0.0.BUILD-SNAPSHOT
 groovyVersion=2.5.5
 cglibNodepVersion=3.2.9
 joddWotVersion=3.3.8
+servletApiVersion=4.0.1
 asciidoc=true
 githubSlug=grails-fields-plugin/grails-fields
 githubBranch=master
