--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,8 @@
 projectVersion=3.0.0.BUILD-SNAPSHOT
 #projectVersion=2.2.7
-grailsVersion=4.0.0.BUILD-SNAPSHOT
+grailsVersion=4.0.0.M1
 scaffoldingVersion=2.0.0.BUILD-SNAPSHOT
-groovyVersion=2.5.5
+groovyVersion=2.5.6
 cglibNodepVersion=3.2.9
 joddWotVersion=3.3.8
 servletApiVersion=4.0.1
