Use release versions of dependencies

--- a/build.gradle
+++ b/build.gradle
@@ -46,8 +46,8 @@ dependencies {
 
 	//testCompile "org.grails:grails-plugin-testing"
 
-	testCompile "org.grails:grails-web-testing-support:2.0.0.BUILD-SNAPSHOT"
-	testCompile "org.grails:grails-gorm-testing-support:2.0.0.BUILD-SNAPSHOT"
+	testCompile "org.grails:grails-web-testing-support:2.0.0.RC1"
+	testCompile "org.grails:grails-gorm-testing-support:2.0.0.RC1"
 
 	console "org.grails:grails-console"
 
