Back to snapshot

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-projectVersion=3.0.0.RC1
+projectVersion=3.0.0.BUILD-SNAPSHOT
 #projectVersion=2.2.7
 grailsVersion=4.0.0.M1
 scaffoldingVersion=2.0.0.RC1
