Preliminary support for GitHub actions Documentation build by asciidoc plugin Docs moved to default folders

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,9 +1,5 @@
 projectVersion=3.0.0.BUILD-SNAPSHOT
-#projectVersion=2.2.7
-grailsVersion=4.0.0.BUILD-SNAPSHOT
-scaffoldingVersion=2.0.0.BUILD-SNAPSHOT
-groovyVersion=2.5.4
-cglibNodepVersion=3.2.9
+grailsVersion=4.0.13
 joddWotVersion=3.3.8
 asciidoc=true
 githubSlug=grails-fields-plugin/grails-fields
