--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,7 +13,6 @@ jobs:
                 uses: actions/checkout@v2
                 with:
                     token: ${{ secrets.GH_TOKEN }}
-            -   uses: gradle/wrapper-validation-action@v1
             -   name: Set up JDK
                 uses: actions/setup-java@v1
                 with:
@@ -26,18 +25,19 @@ jobs:
                 with:
                     token: ${{ secrets.GITHUB_TOKEN }}
             -   name: Publish to Sonatype OSSRH
+                id: publish
+                if: steps.assemble.outcome == 'success'
+                uses: gradle/gradle-build-action@v2
                 env:
                     SONATYPE_USERNAME: ${{ secrets.SONATYPE_USERNAME }}
                     SONATYPE_PASSWORD: ${{ secrets.SONATYPE_PASSWORD }}
+                    SONATYPE_NEXUS_URL: ${{ secrets.SONATYPE_NEXUS_URL }}
                     SONATYPE_STAGING_PROFILE_ID: ${{ secrets.SONATYPE_STAGING_PROFILE_ID }}
                     SIGNING_KEY_ID: ${{ secrets.SIGNING_KEY }}
                     SIGNING_PASSPHRASE: ${{ secrets.SIGNING_PASSPHRASE }}
                     SECRING_FILE: ${{ secrets.SECRING_FILE }}
-                    RELEASE_VERSION: ${{ steps.get_version.outputs.version-without-v }}
-                run: |
-                    echo "${SECRING_FILE}" | base64 -d > "${GITHUB_WORKSPACE}/secring.gpg"
-                    echo "Publishing Artifacts for $RELEASE_VERSION"
-                    (set -x; ./gradlew -Pversion="${RELEASE_VERSION}" -Psigning.secretKeyRingFile="${GITHUB_WORKSPACE}/secring.gpg" publishToSonatype closeAndReleaseSonatypeStagingRepository --no-daemon)
+                with:
+                    arguments: -Psigning.secretKeyRingFile=${{ github.workspace }}/secring.gpg publishToSonatype closeAndReleaseSonatypeStagingRepository
             -   name: Bump patch version by one
                 uses: actions-ecosystem/action-bump-semver@v1
                 id: bump_semver
@@ -45,11 +45,12 @@ jobs:
                   current_version: ${{steps.get_version.outputs.version-without-v }}
                   level: patch
             -   name: Set version in gradle.properties
-                env: 
+                id: snapshotVersion
+                uses: gradle/gradle-build-action@v2
+                env:
                     NEXT_VERSION: ${{ steps.bump_semver.outputs.new_version }}
-                run: |
-                    echo "Preparing next snapshot"
-                    ./gradlew snapshotVersion -Pversion="${NEXT_VERSION}"
+                with:
+                    arguments: -Pversion="${NEXT_VERSION}"
             -   name: Commit & Push changes
                 uses: actions-js/push@master
                 with:
@@ -58,10 +59,12 @@ jobs:
                     author_email: $${ secrets.GIT_USER_EMAIL }}
                     message: 'Set version to next SNAPSHOT'
             -   name: Build documentation
+                id: asciidoctor
+                uses: gradle/gradle-build-action@v2
                 env:
                     RELEASE_VERSION: ${{ steps.get_version.outputs.version-without-v }}
-                run: |
-                    ./gradlew asciidoctor -Pversion="${RELEASE_VERSION}"
+                with:
+                    arguments: -Pversion="${RELEASE_VERSION}"
             -   name: Export Gradle Properties
                 uses: micronaut-projects/github-actions/export-gradle-properties@master
             -   name: Publish to Github Pages
