fix Maven coordinates, since this is not the "JMS" plug-in

--- a/build.gradle
+++ b/build.gradle
@@ -70,7 +70,7 @@ publishing {
     publications {
         maven(MavenPublication) {
             groupId = project.group
-            artifactId = 'jms'
+            artifactId = 'fields'
             version = project.version
 
             from components.java
@@ -78,9 +78,9 @@ publishing {
             artifact javadocJar
 
             pom {
-                name = 'Jms'
-                description = 'JMS integration for Grails'
-                url = 'https://github.com/gpc/jms'
+                name = 'Fields'
+                description = 'Fields integration for Grails'
+                url = 'https://github.com/grails-fields-plugin/grails-fields'
                 licenses {
                     license {
                         name = 'The Apache License, Version 2.0'
@@ -100,9 +100,9 @@ publishing {
                     }
                 }
                 scm {
-                    connection = 'scm:git:git://github.com/gpc/jms.git'
-                    developerConnection = 'scm:git:https://github.com/gpc/jms.git'
-                    url = 'https://github.com/gpc/jms'
+                    connection = 'scm:git:git://github.com/grails-fields-plugin/grails-fields.git'
+                    developerConnection = 'scm:git:https://github.com/grails-fields-plugin/grails-fields.git'
+                    url = 'https://github.com/grails-fields-plugin/grails-fields'
                 }
             }
         }
