--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-projectVersion=3.0.0.BUILD-SNAPSHOT
+projectVersion=3.0.1-SNAPSHOT
 #projectVersion=2.2.7
 grailsVersion=4.1.2
 scaffoldingVersion=2.0.0.RC1
