Adjustments to build.gradle, removed old gradle.yml using gradle-check.yml instead.

--- a/.github/workflows/gradle-check.yml
+++ b/.github/workflows/gradle-check.yml
@@ -19,5 +19,5 @@ jobs:
                     distribution: temurin
                     java-version: 8
             -   uses: gradle/gradle-build-action@v2
-            -   name: Build with Gradle
-                run: ./gradlew check
+                with:
+                    arguments: check
