--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
-projectVersion=3.0.0.BUILD-SNAPSHOT
-#projectVersion=2.2.7
+version=3.0.0.BUILD-SNAPSHOT
+#projectVersion=2.2.7https://github.com/grails-fields-plugin/grails-fields/blob/master/gradle.properties
 grailsVersion=4.1.2
 scaffoldingVersion=2.0.0.RC1
 cglibNodepVersion=3.2.9
